Edited UI view to resolve some layout bugs in index.html & project_index.html.

--- a/gui/css/style-project.css
+++ b/gui/css/style-project.css
@@ -87,10 +87,10 @@
 	font-weight: bold;
 }
 .projectList_project_owner {
-	width: 110px;
+	width: 100px;
 }
 .projectList_project_status {
-	width: 60px;
+	width: 50px;
 }
 .projectList_project_budget {
 	width: 95px;
