--- a/gui/css/style.css
+++ b/gui/css/style.css
@@ -244,7 +244,7 @@ body  {
 	margin: 10px 0 0 30px;
 }
 .alertBox_notification {
-	margin: 0 0 0 10px;
+	margin: 0 0 0 12px;
 	padding: 4px 12px;
 	font-size: 9px;
 	font-weight: bold;
